# MaiLabs

1_2018/inf/21/: 21.docx  l21-2012.djvu
1_2018/inf/5/: ЛРv2.txt  Эмулятор машины Тьюринга в четвёрках, v2.3.html
2_2019/da/: DALab5.cpp
2_2019/lp/kp/: REPORT.md
2_2019/lp/lab3/: REPORT.md
2_2019/lp/lab4/: REPORT.md  solution.pl
2_2019/oop/lab1/: main_io.cpp  rectangle.cpp  rectangle.h  result.txt  result_test02.txt
2_2019/oop/lab2/: main.cpp  rectangle.cpp  rectangle.h  report_02.docx
2_2019/oop/lab3/: CMakeLists.txt  figs.cpp  figs.h  report_03.docx
2_2019/oop/lab4/: main.cpp  report_04.docx  trapeze.h
2_2019/oop/lab5/: CMakeLists.txt  main.cpp  vertex.h
2_2019/oop/lab6/: CMakeLists.txt  list.h  main.cpp
2_2019/oop/lab7/: CMakeLists.txt  canvas.cpp  canvas.h  journal.h  main.cpp  report_07.docx  trapeze.h
2_2019/oop/lab7/figures/: figure.h
2_2019/oop/lab7/lib/imgui/: imgui_impl_sdl.h  imgui_sdl.h
2_2019/oop/lab7/undo_commands/: add_command.h  command.h
2_2019/oop/lab8/: CMakeLists.txt  (+9 more)
4_2022/me/: lab1.r  lab2.r
5_2023/web/: t-1.html  t-11.html  t-2.html  t-3.html  t-4.html  t-5.html  t-6.html  t-8.html
first_course_mai/dicrete_mat/: KP8.docx
fourth/me/: lab1.r  lab2.r
fourth/neuro/: readme.md
second_course_mai/os/: os_lab1.docx
second_course_mai/sp/: Lab01-208-12.rtf  Lab07-208-12.rtf  Lab08-208-12.rtf  readme.md  report-lab2-3.rtf
second_year/da/: DALab6.cpp
second_year/sp/: Lab(4)5-208-12.rtf
third_course_mai/cg/: readme.md
third_year/ai/: README  Solution.ipynb  Solution_MyFramework.ipynb
third_year/cg/: readme.md
(+243 files in other folders)
